<resources>
    <string name="app_name">MindPal</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="noaccount">Dont have an account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="settings">Settings</string>
    <string name="check_in">Check In</string>
    <string name="goals">Goals</string>
    <string name="add_goal">Add A Goal</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="quote">"I am an inspiring quote"</string>
    <string name="moodtoday">Log your mood today :) </string>
    <string name="checkin">Mood Check In</string>
    <string name="featured">Featured Articles</string>
    <string name="welcome">Welcome, </string>
    <string name="moodtracker"> Mood Tracker</string>

</resources>